[gd_scene load_steps=29 format=2]

[ext_resource path="res://Script/Player.gd" type="Script" id=1]
[ext_resource path="res://Scene/SpawnerMusuh.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Anita semi square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Script/CanvasLayer.gd" type="Script" id=4]
[ext_resource path="res://Sounds/Upbeat-Forever.mp3" type="AudioStream" id=5]
[ext_resource path="res://Sounds/jump.wav" type="AudioStream" id=6]
[ext_resource path="res://UI/main_menu_button.png" type="Texture" id=7]
[ext_resource path="res://UI/CloudyCrown_Midday_Right.png" type="Texture" id=8]
[ext_resource path="res://UI/restart_button.png" type="Texture" id=9]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]

[sub_resource type="ConvexPolygonShape" id=3]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.101961, 0.647059, 0.282353, 1 )
roughness = 0.0

[sub_resource type="ConvexPolygonShape" id=6]
points = PoolVector3Array( -1, 1, 1, 1, 1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, 1, -1, -1, 1, -1, 1, -1, -1, -1, 1, 1, 1, -1, 1, -1, 1, 1, -1, -1, 1, 1, 1, -1, 1, -1, -1, -1, 1, -1, -1, -1, -1, 1, 1, 1, 1, -1, -1, 1, -1, 1, 1, 1, -1, 1, 1, 1, -1, -1, -1, -1, -1, 1, -1, 1, -1, -1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0, 1, 0.345098, 1 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.921569, 1, 0, 1 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 1, 0.670588, 0.670588, 1 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0, 0.858824, 1, 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.898039, 0.764706, 0.901961, 1 )
corner_radius_top_left = 15
corner_radius_bottom_right = 15

[sub_resource type="DynamicFont" id=13]
size = 35
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.737255, 0.815686, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=16]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="PanoramaSky" id=18]
radiance_size = 0
panorama = ExtResource( 8 )

[sub_resource type="Environment" id=19]
background_mode = 2
background_sky = SubResource( 18 )
background_sky_custom_fov = 119.1
background_energy = 0.9
glow_bloom = 0.68

[node name="Level" type="Spatial"]
__meta__ = {
"_edit_horizontal_guides_": [ 94.0 ]
}

[node name="SpawnerMusuh" parent="." instance=ExtResource( 2 )]
transform = Transform( -10, 8.74228e-08, 0, -8.74228e-07, -1, 0, 0, 0, 10, 0, 0.095, -400 )

[node name="Tanah" type="StaticBody" parent="." groups=[
"objekAwal",
]]
transform = Transform( 10, 0, 0, 0, 1, 0, 0, 0, 10, 0, 0, 0 )

[node name="Tanah" type="MeshInstance" parent="Tanah"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Tanah"]
shape = SubResource( 3 )

[node name="Player" type="KinematicBody" parent="." groups=[
"pemain",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00283813, 12.965, -0.0303626 )
script = ExtResource( 1 )

[node name="SuaraPemainLoncat" type="AudioStreamPlayer3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00283813, -12.965, 0.0303626 )
stream = ExtResource( 6 )
unit_db = 80.0

[node name="Camera" type="Camera" parent="Player"]
transform = Transform( 0.99519, 0, 0.0979651, 0, 1, 0, -0.0979651, 0, 0.99519, 1.84568, 2.58614, 12.0529 )
near = 0.01
far = 8192.0

[node name="Player" type="MeshInstance" parent="Player"]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="Player"]
shape = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="Player"]
transform = Transform( -0.823345, 2.45376e-08, -0.567542, -0.216145, 0.924639, 0.313566, 0.524771, 0.380844, -0.761297, -7.26358, 8.95693, -4.1079 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 4 )

[node name="Panel_00ff58" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 144.644
margin_top = 146.174
margin_right = 184.644
margin_bottom = 186.174
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_ebff00" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 86.4098
margin_top = 145.34
margin_right = 126.41
margin_bottom = 185.34
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_ffabab" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 86.3319
margin_top = 93.289
margin_right = 126.332
margin_bottom = 133.289
custom_styles/panel = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_00dbff" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.705882 )
margin_left = 144.389
margin_top = 93.3976
margin_right = 184.389
margin_bottom = 133.398
custom_styles/panel = SubResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer"]
margin_left = 154.723
margin_top = 155.072
margin_right = 194.723
margin_bottom = 174.072
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.211765, 0.388235, 0.8, 1 )
text = "x2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="CanvasLayer"]
margin_left = 95.7538
margin_top = 155.408
margin_right = 135.754
margin_bottom = 174.408
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.211765, 0.388235, 0.8, 1 )
text = "-2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="CanvasLayer"]
margin_left = 95.671
margin_top = 103.541
margin_right = 135.671
margin_bottom = 122.541
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.211765, 0.388235, 0.8, 1 )
text = ":2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer"]
margin_left = 152.386
margin_top = 103.731
margin_right = 192.386
margin_bottom = 122.731
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0.211765, 0.388235, 0.8, 1 )
text = "+2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_Score" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0.705882 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.398
margin_top = 120.542
margin_right = -29.3982
margin_bottom = 169.542
custom_styles/panel = SubResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_Score" type="Label" parent="CanvasLayer/Panel_Score"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -86.0498
margin_top = 3.50468
margin_right = -49.0498
margin_bottom = 43.5047
custom_fonts/font = SubResource( 13 )
custom_colors/font_color = Color( 0.52549, 0.34902, 1, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Panel_Score"]
margin_left = 34.8752
margin_top = -18.444
margin_right = 96.8752
margin_bottom = 0.556025
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.176471, 0.34902, 0.411765, 1 )
text = "SCORE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel_Best_Score" type="Panel" parent="CanvasLayer"]
self_modulate = Color( 0.365234, 0.636307, 0.730469, 0.666667 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -159.175
margin_top = 202.313
margin_right = -22.175
margin_bottom = 235.313
custom_styles/panel = SubResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="CanvasLayer/Panel_Best_Score"]
margin_left = 15.3077
margin_top = -17.983
margin_right = 124.308
margin_bottom = 1.01703
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0.937255, 0.917647, 0.882353, 1 )
text = "best score"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/Panel_Best_Score"]
anchor_left = 0.928
anchor_right = 0.928
margin_left = -77.0795
margin_top = 4.33823
margin_right = -37.0795
margin_bottom = 28.3382
custom_fonts/font = SubResource( 16 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label_info" type="Label" parent="CanvasLayer"]
modulate = Color( 0.0588235, 1, 0.360784, 1 )
self_modulate = Color( 1, 1, 1, 0.564706 )
anchor_left = 0.5
anchor_top = 0.788
anchor_right = 0.5
anchor_bottom = 0.788
margin_left = -13.7605
margin_top = 13.9002
margin_right = 55.2395
margin_bottom = 115.9
custom_fonts/font = SubResource( 17 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart_Button" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.599
anchor_right = 0.5
anchor_bottom = 0.599
margin_left = -80.0
margin_top = -29.28
margin_right = 80.0
margin_bottom = 29.72
icon = ExtResource( 9 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main_Menu_Button" type="Button" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.703
anchor_right = 0.5
anchor_bottom = 0.703
margin_left = -80.0
margin_top = -30.16
margin_right = 80.0
margin_bottom = 29.84
icon = ExtResource( 7 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 5 )
unit_db = 40.0
autoplay = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 19 )

[connection signal="pressed" from="CanvasLayer/Restart_Button" to="CanvasLayer" method="_on_Restart_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/Main_Menu_Button" to="CanvasLayer" method="_on_Main_Menu_Button_pressed"]
